@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.14 2004/03/26 02:27:55 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2004/05/29 01:19:32 xtraeme Exp $
 #
 
-DISTNAME=	XML-DOM-1.42
+DISTNAME=	XML-DOM-1.43
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 SVR4_PKGNAME=	p5xdo
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
